--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "traveller-airbnb",
+  "name": "ngo-donation-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
